--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -22,7 +22,7 @@
   <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
 
   <!-- custom scripts -->
-  <script src="{{ js_url }}"></script>
+  <script src="{{ url_for('static', filename='netSearch.js') }}"></script>
   <style>
     h3 a.stmt_toggle {
       cursor: pointer;
