--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -23,6 +23,9 @@
 
   <!-- custom scripts -->
   <script src="{{ url_for('static', filename='netSearch.js') }}"></script>
+  <script>
+    const SUBMIT_URL = '{{ post_url }}';
+  </script>
   <style>
     h3 a.stmt_toggle {
       cursor: pointer;
