Clarify default message

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -196,7 +196,7 @@
     </form>
   </div>
   <div class="container">
-    <p><i id="query-status">Waiting for query</i></p>
+    <p><i id="query-status">Waiting for query to be submitted</i></p>
   </div>
 
   <div id="table-area" class="container">
