Activate signed search in UI

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -133,15 +133,15 @@
           >
         </div>
       </div>
-<!--      <div class="row">-->
-<!--        <div class="dropdown" style="padding-left: 15px; padding-right: 15px;">-->
-<!--          <label><select id="sign-dd" disabled>-->
-<!--            <option selected="selected" value="no_sign">No sign</option>-->
-<!--            <option value="plus">+</option>-->
-<!--            <option value="minus">-</option>-->
-<!--          </select>&nbsp;&nbsp;Sign</label>-->
-<!--        </div>-->
-<!--      </div>-->
+      <div class="row">
+        <div class="dropdown" style="padding-left: 15px; padding-right: 15px;">
+          <label><select id="sign-dd">
+            <option selected="selected" value="no_sign">No sign</option>
+            <option value="plus" title="Upregulation">+</option>
+            <option value="minus" title="Downregulation">-</option>
+          </select>&nbsp;&nbsp;Sign</label>
+        </div>
+      </div>
       <div class="custom-control custom-checkbox">
         <input type="checkbox" class="custom-control-input" id="two-ways">
         <label class="custom-control-label" for="two-ways">Include reverse search </label>
