Add stmts dl link, show/hide w response

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -175,6 +175,11 @@
                  min="2" max="120"
                  title="Enter a timeout between 2 and 120 to override the default timeout of 30 seconds.">
         </div>
+        <div class="col">
+          <p id="download-link" hidden>Download Statements
+            <a download href="/stmts_download/stmts.json"
+               id="download-link">here</a></p>
+        </div>
       </div>
     </form>
   </div>
