Add shared regulators option in search ui

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -147,8 +147,12 @@
         </div>
       </div>
       <div class="custom-control custom-checkbox">
+        <input type="checkbox" class="custom-control-input" id="shared-regulators">
+        <label class="custom-control-label" for="shared-regulators">Include shared regulators</label>
+      </div>
+      <div class="custom-control custom-checkbox">
         <input type="checkbox" class="custom-control-input" id="two-ways">
-        <label class="custom-control-label" for="two-ways">Include reverse search </label>
+        <label class="custom-control-label" for="two-ways">Include reverse search</label>
       </div>
       <div class="custom-control custom-checkbox">
         <input type="checkbox" class="custom-control-input" id="weighted-search">
