CamelCase for placeholder, add link to docs

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -74,6 +74,7 @@
 <body>
   <div class="container">
     <h1 class="display-5" style="padding-top: 15px; padding-bottom: 15px;">INDRA Network Search</h1>
+    <p>Read the documentation <a href="https://github.com/indralab/depmap_analysis/blob/master/doc/indra_depmap_service/web_ui_introduction.rst">here</a>.</p>
   </div>
   <div class="container">
     <h2 class="display-6">Enter search</h2>
@@ -97,7 +98,7 @@
         <div class="col">
           <div class="container" style="width: 160px; float: left; padding: 0px;">
             <input class="form-control" type="number" step="1" name="k_shortest" id="k-shortest" min="1" max="50"
-                   placeholder="max # paths"
+                   placeholder="Max # Paths"
                    title="The maximum number of paths per catergory to return. Default is 50.">
           </div>
         </div>
