--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -25,13 +25,15 @@
   <script>
     const stmtOptions = {{ stmt_types|safe }};
     const nodeOptions = {{ node_name_spaces|safe }};
+    let query_hash = '{{ query_hash }}';
   </script>
   <script src="{{ url_for('static', filename='netSearch.js') }}"></script>
   <script>
     $(document).ready(function() {
       let oldQuery = {{ old_query|safe }};
-      console.log(oldQuery);
-      if (!($.isEmptyObject(oldQuery))) {
+      if (oldQuery && !($.isEmptyObject(oldQuery))) {
+        console.log('Filling results for old query:');
+        console.log(oldQuery);
         let [oldStmtItems, oldNodeItems] = fillOldQuery(oldQuery);
         const stmtFilter = new Choices('#stmt-filter', {choices: oldStmtItems});
         const nodeFilter = new Choices('#node-filter', {choices: oldNodeItems});
@@ -41,7 +43,12 @@
       }
       resetCounters();
       clearAllTables();
-      fillResultsTable({{ search_results|safe }}, "{{ source }}", "{{ target }}")
+      let oldResults = {{ old_result|safe }};
+      if (oldResults) {
+        console.log('old_result');
+        console.log(old_result);
+        fillResultsTable(oldResults, "{{ source }}", "{{ target }}")
+      }
     });
   </script>
   <style>
