Fix statements json download

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -205,7 +205,7 @@
                  title="Enter a timeout between 2 and 120 to override the default timeout of 30 seconds.">
         </div>
         <div class="col">
-          <p id="download-link" hidden>Download Statements
+          <p id="download-p" hidden>Download Statements
             <a download href="/stmts_download/stmts.json"
                id="download-link">here</a></p>
         </div>
