Remove one of the id attributes from footer tag

--- a/indra_depmap_service/templates/out_of_service.html
+++ b/indra_depmap_service/templates/out_of_service.html
@@ -42,8 +42,7 @@
     please check back later today</p>
   </div>
 </div>
-  <footer id="footer" class="footer text-muted" id="about" style="background:
-#F5F5F5;">
+  <footer id="footer" class="footer text-muted" style="background: #F5F5F5;">
     <div class="container">
       <h5 class="my-0 mr-md-auto font-weight-normal">About</h5>
       <small>
