Add text box to the page

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -162,6 +162,9 @@
           >
         </div>
       </div>
+      <div class="rox">
+        <input type="text" id="mesh-id-list" class="form-control" title="The path will only contain edges with provided Mesh IDs (all if left empty)." placeholder="Mesh IDs (comma separated)">
+      </div>
       <div class="row">
         <div class="dropdown" style="padding-left: 15px; padding-right: 15px;">
           <label><select id="sign-dd" {% if not has_signed_graph %}disabled{% endif %}>
