--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -162,7 +162,7 @@
           >
         </div>
       </div>
-      <div class="rox">
+      <div class="row">
         <input type="text" id="mesh-id-list" class="form-control" title="The path will only contain edges with provided Mesh IDs (all if left empty)." placeholder="Mesh IDs (comma separated)">
       </div>
       <div class="row">
