--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -164,6 +164,10 @@
       </div>
       <div class="row">
         <input type="text" id="mesh-id-list" class="form-control" title="The path will only contain edges with provided Mesh IDs (all if left empty)." placeholder="Mesh IDs (comma separated)">
+        <div class="custom-control custom-checkbox">
+          <input type="checkbox" class="custom-control-input" id="strict-mesh-id-filtering">
+          <label class="custom-control-label" for="strict-mesh-id-filtering">Strict filtering on Mesh IDs</label>
+        </div>
       </div>
       <div class="row">
         <div class="dropdown" style="padding-left: 15px; padding-right: 15px;">
