--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -25,6 +25,7 @@
   <script>
     const stmtOptions = {{ stmt_types|safe }};
     const nodeOptions = {{ node_name_spaces|safe }};
+    const termNsOptions = {{ terminal_name_spaces|safe }};
     let query_hash = '{{ query_hash }}';
   </script>
   <script src="{{ url_for('static', filename='netSearch.js') }}"></script>
@@ -34,12 +35,14 @@
       if (oldQuery && !($.isEmptyObject(oldQuery))) {
         console.log('Filling results for old query:');
         console.log(oldQuery);
-        let [oldStmtItems, oldNodeItems] = fillOldQuery(oldQuery);
+        let [oldStmtItems, oldNodeItems, oldTermNamespaces] = fillOldQuery(oldQuery);
         const stmtFilter = new Choices('#stmt-filter', {choices: oldStmtItems});
         const nodeFilter = new Choices('#node-filter', {choices: oldNodeItems});
+        const terminalNamespace = new Choices('#terminal-namespace', {choices: oldTermNamespaces});
       } else {
         const stmtFilter = new Choices('#stmt-filter', {choices: stmtItems});
         const nodeFilter = new Choices('#node-filter', {choices: nodeItems});
+        const terminalNamespace = new Choices('#terminal-namespace', {choices: termNamespaces});
       }
       resetCounters();
       clearAllTables();
@@ -137,6 +140,12 @@
         <div class="col">
           <div class="form-select" title="The path will only contain nodes from the selected namespaces">
             <select name="node-filter" id="node-filter" placeholder="Node namespaces included in path" multiple>
+            </select>
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-select" title="Terminal namespace">
+            <select name="terminal-namespace" id="terminal-namespace" placeholder="Terminal namespace" multiple>
             </select>
           </div>
         </div>
