Align rows on the page

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -163,10 +163,16 @@
         </div>
       </div>
       <div class="row">
-        <input type="text" id="mesh-id-list" class="form-control" title="The path will only contain edges with provided Mesh IDs (all if left empty)." placeholder="Mesh IDs (comma separated)">
-        <div class="custom-control custom-checkbox">
-          <input type="checkbox" class="custom-control-input" id="strict-mesh-id-filtering">
-          <label class="custom-control-label" for="strict-mesh-id-filtering">Strict filtering on Mesh IDs</label>
+        <div class="col">
+          <input type="text" id="mesh-id-list" class="form-control" title="The path will only contain edges with provided MeSH IDs (all if left empty)." placeholder="Mesh IDs (comma separated)">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" id="strict-mesh-id-filtering">
+            <label class="custom-control-label" for="strict-mesh-id-filtering">Strict filtering on MeSH IDs</label>
+          </div>
         </div>
       </div>
       <div class="row">
