Set constants default value

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -191,14 +191,22 @@
       </div>
       <div class="row">
         <div class="col">
-          <input class="form-control" type="number" step="1" name="const_c" id="const_c" placeholder="C = [1..120]"
-                 min="1" max="120"
-                 title="Constant C.">
+          <div class="container" style="width: 90px; float: left; padding: 0px;">Constant C</div>
+          <div class="container" style="width: 90px; float: left; padding: 0px;">
+            <input class="form-control" type="number" step="1" name="const_c" id="const_c" placeholder="C = [1..120]"
+              min="1" max="120"
+              title="Constant C."
+              value="1">
+          </div>
         </div>
         <div class="col">
-          <input class="form-control" type="number" step="1" name="const_tk" id="const_tk" placeholder="Tk = [1..120]"
-                 min="1" max="120"
-                 title="Constant Tk.">
+          <div class="container" style="width: 90px; float: left; padding: 0px;">Constant C</div>
+          <div class="container" style="width: 90px; float: left; padding: 0px;">
+            <input class="form-control" type="number" step="1" name="const_tk" id="const_tk" placeholder="Tk = [1..120]"
+              min="1" max="120"
+              title="Constant Tk."
+              value="1">
+          </div>
         </div>
       </div>
       <div class="row">
