Add field to set max_per_node attribute

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -129,6 +129,13 @@
                    title="The maximum number of paths per catergory to return. Default is 50.">
           </div>
         </div>
+        <div class="col">
+          <div class="container" style="width: 160px; float: left; padding: 0px;">
+            <input class="form-control" type="number" step="1" name="max-per-node" id="max-per-node" min="1" max="50"
+                   placeholder="Max per node"
+                   title="The maximum number of times a node can be a parent to leaf nodes for open unweighted search.">
+          </div>
+        </div>
       </div>
       <!--div class="row">
       </div-->
