--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -185,7 +185,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <input type="text" id="mesh-id-list" class="form-control" title="The path will only contain edges with provided MeSH IDs (all if left empty)." placeholder="Mesh IDs (comma separated)">
+          <input type="text" id="mesh-id-list" class="form-control" title="The path will only contain edges with provided MeSH IDs (all if left empty)." placeholder="MeSH IDs (comma separated)">
         </div>
       </div>
       <div class="row">
@@ -198,11 +198,11 @@
       </div>
       <div class="row">
         <div class="col">
-          <div class="container" style="width: 90px; float: left; padding: 0px;">Constant C</div>
+          <div class="container" style="width: 90px; float: left; padding: 0px;">Path weight/length tradeoff</div>
           <div class="container" style="width: 90px; float: left; padding: 0px;">
             <input class="form-control" type="number" step="1" name="const_c" id="const_c" placeholder="C = [1..120]"
               min="1" max="120"
-              title="Constant C."
+              title="Constant used in edge weight calculation based on MeSH IDs. Constant C in the formula -C * ln(ref_counts / (total + Tk))"
               value="1">
           </div>
         </div>
@@ -211,7 +211,7 @@
           <div class="container" style="width: 90px; float: left; padding: 0px;">
             <input class="form-control" type="number" step="1" name="const_tk" id="const_tk" placeholder="Tk = [1..120]"
               min="1" max="120"
-              title="Constant Tk."
+              title="Constant used in edge weight calculation based on MeSH IDs. Constant Tk in the formula -C * ln(ref_counts / (total + Tk))"
               value="10">
           </div>
         </div>
