--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -129,16 +129,78 @@
                    title="The maximum number of paths per catergory to return. Default is 50.">
           </div>
         </div>
-        <div class="col">
-          <div class="container" style="width: 160px; float: left; padding: 0px;">
-            <input class="form-control" type="number" step="1" name="max-per-node" id="max-per-node" min="1" max="50"
-                   placeholder="Max per node"
-                   title="The maximum number of times a node can be a parent to leaf nodes for open unweighted search.">
-          </div>
-        </div>
       </div>
       <!--div class="row">
       </div-->
+      <div class="row">
+        <div class="col">
+          <div class="card-header">
+              <a href="#" class="stmt_toggle" data-toggle="collapse" data-target="#collapse-open-search" aria-expanded="false" aria-controls="collapse-paths-5f">Open search</a>
+          </div>
+          <div id="collapse-open-search" class="collapse">
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <div class="form-select" title="The path fill end on and will not expand from the nodes from the selected namespaces">
+                    <label for="terminal-namespaces">Terminal namespaces:</label><br/>
+                    <select name="terminal-namespaces" id="terminal-namespaces" placeholder="Terminal namespaces" multiple>
+                    </select>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="container" style="width: 160px; float: left; padding: 0px;">
+                    <input class="form-control" type="number" step="1" name="max-per-node" id="max-per-node" min="1" max="50"
+                          placeholder="Max per node"
+                          title="The maximum number of times a node can be a parent to leaf nodes for open unweighted search.">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card-header">
+              <a href="#" class="stmt_toggle" data-toggle="collapse" data-target="#collapse-context" aria-expanded="false" aria-controls="collapse-paths-5f">Context</a>
+          </div>
+          <div id="collapse-context" class="collapse">
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <input type="text" id="mesh-id-list" class="form-control" title="The path will only contain edges with provided MeSH IDs (all if left empty)." placeholder="MeSH IDs (comma separated)">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="strict-mesh-id-filtering">
+                    <label class="custom-control-label" for="strict-mesh-id-filtering">Strict filtering on MeSH IDs</label>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="container" style="width: 90px; float: left; padding: 0px;">Path weight/length tradeoff</div>
+                  <div class="container" style="width: 90px; float: left; padding: 0px;">
+                    <input class="form-control" type="number" step="1" name="const_c" id="const_c" placeholder="C = [1..120]"
+                      min="1" max="120"
+                      title="Constant used in edge weight calculation based on MeSH IDs. Constant C in the formula -C * ln(ref_counts / (total + Tk))"
+                      value="1">
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="container" style="width: 90px; float: left; padding: 0px;">Evidence threshold</div>
+                  <div class="container" style="width: 90px; float: left; padding: 0px;">
+                    <input class="form-control" type="number" step="1" name="const_tk" id="const_tk" placeholder="Tk = [1..120]"
+                      min="1" max="120"
+                      title="Constant used in edge weight calculation based on MeSH IDs. Constant Tk in the formula -C * ln(ref_counts / (total + Tk))"
+                      value="10">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="col">
           <div class="form-select" title="The path will not contain the selected statement types">
@@ -151,13 +213,6 @@
           <label for="node-filter">Node namespaces:</label><br/>
           <div class="form-select" title="The path will only contain nodes from the selected namespaces">
             <select name="node-filter" id="node-filter" placeholder="Node namespaces included in path" multiple>
-            </select>
-          </div>
-        </div>
-        <div class="col">
-          <div class="form-select" title="The path fill end on and will not expand from the nodes from the selected namespaces">
-            <label for="terminal-namespaces">Terminal namespaces:</label><br/>
-            <select name="terminal-namespaces" id="terminal-namespaces" placeholder="Terminal namespaces" multiple>
             </select>
           </div>
         </div>
@@ -181,39 +236,6 @@
           title="Every x valid paths, cull the node with the highest (weighted) degree from the network. This increases the variety of paths found and reduces the impact of nodes with extremely high connectivity in the network."
           placeholder="Cull highest degree node every # paths"
           >
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <input type="text" id="mesh-id-list" class="form-control" title="The path will only contain edges with provided MeSH IDs (all if left empty)." placeholder="MeSH IDs (comma separated)">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="strict-mesh-id-filtering">
-            <label class="custom-control-label" for="strict-mesh-id-filtering">Strict filtering on MeSH IDs</label>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <div class="container" style="width: 90px; float: left; padding: 0px;">Path weight/length tradeoff</div>
-          <div class="container" style="width: 90px; float: left; padding: 0px;">
-            <input class="form-control" type="number" step="1" name="const_c" id="const_c" placeholder="C = [1..120]"
-              min="1" max="120"
-              title="Constant used in edge weight calculation based on MeSH IDs. Constant C in the formula -C * ln(ref_counts / (total + Tk))"
-              value="1">
-          </div>
-        </div>
-        <div class="col">
-          <div class="container" style="width: 90px; float: left; padding: 0px;">Constant Tk</div>
-          <div class="container" style="width: 90px; float: left; padding: 0px;">
-            <input class="form-control" type="number" step="1" name="const_tk" id="const_tk" placeholder="Tk = [1..120]"
-              min="1" max="120"
-              title="Constant used in edge weight calculation based on MeSH IDs. Constant Tk in the formula -C * ln(ref_counts / (total + Tk))"
-              value="10">
-          </div>
         </div>
       </div>
       <div class="row">
