Expand on banner click

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -126,16 +126,17 @@
           <div class="container" style="width: 160px; float: left; padding: 0px;">
             <input class="form-control" type="number" step="1" name="k_shortest" id="k-shortest" min="1" max="50"
                    placeholder="Max # Paths"
-                   title="The maximum number of paths per catergory to return. Default is 50.">
+                   title="The maximum number of paths per category to return. Default is 50.">
           </div>
         </div>
       </div>
-      <!--div class="row">
-      </div-->
       <div class="row">
         <div class="col">
-          <div class="card-header">
-              <a href="#" class="stmt_toggle" data-toggle="collapse" data-target="#collapse-open-search" aria-expanded="false" aria-controls="collapse-paths-5f">Open search</a>
+          <div class="card-header" data-toggle="collapse" data-target="#collapse-open-search" aria-expanded="false" aria-controls="collapse-paths-5f">
+            <h3 class="display-7">
+              <a href="#" class="stmt_toggle">
+                Open Search Options</a>
+            </h3>
           </div>
           <div id="collapse-open-search" class="collapse">
             <div class="card-body">
@@ -161,8 +162,11 @@
       </div>
       <div class="row">
         <div class="col">
-          <div class="card-header">
-              <a href="#" class="stmt_toggle" data-toggle="collapse" data-target="#collapse-context" aria-expanded="false" aria-controls="collapse-paths-5f">Context</a>
+          <div class="card-header" data-toggle="collapse" data-target="#collapse-context" aria-expanded="false" aria-controls="collapse-paths-5f">
+            <h3 class="display-7">
+              <a href="#" class="stmt_toggle">
+                Context Options</a>
+            </h3>
           </div>
           <div id="collapse-context" class="collapse">
             <div class="card-body">
