Add blurb on max per node, code formatting

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -149,6 +149,8 @@
                   </div>
                 </div>
                 <div class="col">
+                  <div>Maximum number of children to consider during
+                    unweighted breadth first search</div>
                   <div class="container" style="width: 160px; float: left; padding: 0px;">
                     <input class="form-control" type="number" step="1" name="max-per-node" id="max-per-node" min="1" max="50"
                           placeholder="Max per node"
@@ -164,8 +166,7 @@
         <div class="col">
           <div class="card-header" data-toggle="collapse" data-target="#collapse-context" aria-expanded="false" aria-controls="collapse-paths-5f">
             <h3 class="display-7">
-              <a href="#" class="stmt_toggle">
-                Context Options</a>
+              <a href="#" class="stmt_toggle">Context Options</a>
             </h3>
           </div>
           <div id="collapse-context" class="collapse">
