--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -301,6 +301,7 @@
 
   <div id="table-area" class="container">
     <h2 class="display-6">Search Results</h2>
+    <p>Click on the headers to expand/collapse detailed results</p>
     <!-- Dynamic tables -->
   </div>
 
