Add hover title to linkouts

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -61,7 +61,7 @@
     });
   </script>
   <style>
-    h3 a.stmt_toggle {
+    a.stmt_toggle {
       cursor: pointer;
       color: #000000;
     }
