Show hint of clicking results

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -143,6 +143,7 @@
               <a href="#" class="stmt_toggle">
                 Open Search Options</a>
             </h3>
+            <i>Click to see detailed options</i>
           </div>
           <div id="collapse-open-search" class="collapse">
             <div class="card-body">
@@ -174,6 +175,7 @@
             <h3 class="display-7">
               <a href="#" class="stmt_toggle">Context Options</a>
             </h3>
+            <i>Click to see detailed options</i>
           </div>
           <div id="collapse-context" class="collapse">
             <div class="card-body">
