Update docs link

--- a/indra_depmap_service/templates/query_template.html
+++ b/indra_depmap_service/templates/query_template.html
@@ -107,7 +107,7 @@
 <body>
   <div class="container">
     <h1 class="display-5" style="padding-top: 15px; padding-bottom: 15px;">INDRA Network Search</h1>
-    <p>Read the documentation <a href="https://github.com/indralab/depmap_analysis/blob/master/doc/indra_depmap_service/web_ui_introduction.rst">here</a>.</p>
+    <p>Read the documentation <a href="https://depmap-analysis.readthedocs.io/en/latest/indra_depmap_service/web_ui_introduction.html">here</a>.</p>
   </div>
   <div class="container">
     <h2 class="display-6">Enter search</h2>
